--- a/stylesadmin.css
+++ b/stylesadmin.css
@@ -574,7 +574,7 @@ th, td {
 }
 
 .button {
-    background-color: #1d04aa;
+    background-color: coral;
     border: none;
     color: white;
     padding: 15px;
